hledger/test/errors/undeclared-acct.j
# hledger check accounts

1/1
  (a)  1
